# sb_cfg_gen

./: .gitignore  README.md  README_zh_cn.md  README_zh_hk.md  pyproject.toml  template.json
sb_cfg_gen/: cli.py  lib.py
sb_cfg_gen/libs/: data.py  dicts.py  node.py  other.py  types.py
src/sb_cfg_gen/: app.py  areas.py  cli.py  constants.py  context.py  main.py  other.py  types.py  web.py
src/sb_cfg_gen/cli/: __main__.py  context.py  fetch_nodes.py  gen_airport.py  gen_diy.py  web_api.py
src/sb_cfg_gen/factors/: config_factor.py  config_ops.py  node_factor.py  node_ops.py
src/sb_cfg_gen/libs/: area.py  areas.py  config_factor.py  datas.py  dicts.py  inputing.py  node.py  node_factor.py  other.py  types.py  waiting.py  web.py
src/sb_cfg_gen/parses/: vless.py
templates/: client.json  web_scraper.json
