[project]
name = "sb_cfg_gen"
version = "1.0"
description = "The tools to generate sing-box config file"
authors = [
    { name = "Jacko", email = "l2982211930@163.com" }
]
dependencies = [
    "requests",
    "fastapi[standard]"
]

[project.scripts]
sb-gen-airport = "sb_cfg_gen.main:gen_airport"
sb-gen-diy = "sb_cfg_gen.main:gen_diy"
sb-web-api = "sb_cfg_gen.main:web_api"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"