[project]
name = "sb_cfg_gen"
version = "1.0"
description = "The tools to generate sing-box config file"
authors = [
    { name = "Jacko", email = "l2982211930@163.com" }
]
dependencies = [
    "requests",
    "fastapi[standard]"
]

[project.scripts]
sb-fetch-nodes = "sb_cfg_gen.cli.fetch_nodes:run"
sb-gen-airport = "sb_cfg_gen.cli.gen_airport:run"
sb-gen-diy = "sb_cfg_gen.cli.gen_diy:run"
sb-web-api = "sb_cfg_gen.cli.web_api:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"